--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
 
     <uses-permission
         android:required="true"
+        android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission
+        android:required="true"
         android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission
         android:required="true"
@@ -27,5 +30,8 @@
     <uses-permission
         android:required="true"
         android:name="android.permission.INTERNET"/>
+    <uses-permission
+        android:required="true"
+        android:name="android.permission.RECORD_AUDIO" />
 
 </manifest>
